# Transporter

./: .gitignore  README.md  meson.build
data/: com.github.bleakgrey.transporter.appdata.xml.in  com.github.bleakgrey.transporter.contract  com.github.bleakgrey.transporter.desktop.in  com.github.bleakgrey.transporter.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  com.github.bleakgrey.transporter.pot  de.po  fr.po  fr_FR.po  it.po  it_IT.po  lt.po  pt_BR.po  ru.po
src/: Settings.vala  Transporter.vala  TransporterWindow.vala  TransporterWindow.vala~  Utils.vala  WormholeInterface.vala  WormholeInterface.vala~
src/View/: AbstractView.vala  DropView.vala  ErrorView.vala  InstallView.vala  InstallView.vala~  ReceiveView.vala  SendView.vala  SettingsView.vala  WelcomeView.vala
